Fixed friend's score alignment

--- a/src/pages/student/quizzes/QuizResult/index.module.css
+++ b/src/pages/student/quizzes/QuizResult/index.module.css
@@ -92,12 +92,12 @@
 }
 
 .friendsScore {
+  margin-left: auto;
   font-size: 16px;
   color: #48535b;
 }
 
 .friendsName {
-  align-self: center;
   padding: 10px 10px 10px 5px;
   font-size: 16px;
   color: #48535b;
@@ -174,7 +174,7 @@
 }
 
 .friendsScoreCardBody {
-  padding: 0px;
+  padding: 0px 15px;
 }
 
 .divider {
@@ -189,7 +189,7 @@
 
 .friendsScoreInfo {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
